--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,9 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-image-picker')
+    implementation project(':react-native-amap3d')
+    implementation project(':react-native-spring-scrollview')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-vector-icons')
     implementation project(':@react-native-community_async-storage')
