--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "dev": "npm add @babel/runtime && cnpm i"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.3.0",
     "react": "16.8.3",
     "react-native": "0.59.4",
+    "react-native-alphabetlistview": "^0.3.1",
+    "react-native-amap3d": "^1.1.0",
     "react-native-audio": "^4.3.0",
-    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-gifted-chat": "^0.7.3",
     "react-native-image-picker": "^0.28.1",
+    "react-native-largelist-v3": "^3.0.13",
     "react-native-materialui-textfield": "^0.13.2",
     "react-native-really-awesome-button": "^1.4.2",
+    "react-native-snap-carousel": "^3.7.5",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-spring-scrollview": "^2.0.19",
+    "react-native-swipeout": "^2.3.6",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
     "react-native-video": "^4.4.1",
